[gd_scene load_steps=4 format=3 uid="uid://bvxpgjo6dvqlg"]

[ext_resource type="Theme" uid="uid://dylriqvd0gggf" path="res://game_main_theme.tres" id="1_hhc8l"]
[ext_resource type="Script" uid="uid://dm40gr11g3pq8" path="res://Scripts/UI/SkillTreeMenuTabs.gd" id="1_pogln"]
[ext_resource type="PackedScene" uid="uid://dajhetili8wxi" path="res://Scenes/UI/CustomButtonNew.tscn" id="2_mmo2s"]

[node name="SkillTreeTabs" type="Control"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_pogln")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 70)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 4.0
grow_horizontal = 2
theme = ExtResource("1_hhc8l")
theme_type_variation = &"CurrencyUIMain"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="SkillTreeButton" parent="PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_mmo2s")]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
text = "Skill Tree"

[node name="ArmoryButton" parent="PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_mmo2s")]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
text = "Armory"

[node name="VisualizerButton" parent="PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_mmo2s")]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
text = "Network Visualizer"

[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/SkillTreeButton" to="." method="_on_skill_tree_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/ArmoryButton" to="." method="_on_armory_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VisualizerButton" to="." method="_on_visualizer_button_pressed"]
